2023-09-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/uc6502-stack-auto/support.c,
	* support/regression/ports/uc6502-stack-auto/uCsim.cmd,
	* support/regression/ports/uc6502/support.c,
	* support/regression/ports/uc6502/uCsim.cmd: moved simif to safer location

2023-09-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/r2k/crt0.s,
	  device/lib/r2ka/crt0.s,
	  device/lib/r3ka/crt0.s:
	  Place interrupt vector table at multiple of 512B, as required on Rabbit 3000 and above.

2023-09-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug-3563.c: revert accidental enable of failing test

2023-09-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_1_xy.c:
	  Disable test for FreeBSD 13 / clang-14, where it fails due to known bug.

2023-09-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/mos6502-stack-auto/crt0.s,
	* device/lib/mos6502/crt0.s: clear zero page, reorder areas
	* src/mos6502/main.c(m6502_finaliseOptions): use whole zero page,
	  improved default memory map
	  (m6502_genAssemblerPreamble): move __DPTR & __TEMP to fixed
	  address from 0 and up,
	  (m6502_genIVT): fixed, allow only 2 interrupts
	* support/regression/ports/uc6502-stack-auto/spec.mk,
	* support/regression/ports/uc6502/spec.mk: use more logical memory map
	* support/regression/gte/pr34099.c: suppress valid warning
	* support/regression/gte/pr97404.c,
	* support/regression/gte/pr97836.c,
	* support/regression/tests/bug-3563.c: fixed warnings

2023-09-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asstm8/stm8.h,
	  sdas/asstm8/stm8mch.c,
	  sdas/linksrc/lklist.c,
	  src/SDCCopt.c,
	  src/SDCCval.c:
	  Fix a few cases of undefined behavior.
	* device/lib/r*k*/crt0.s:
	  Fix location of secondary watchdog interrupt vector (part of bug #3652).

2023-09-18 Philipp Klaus Krause <philipp@colecovision.eu>
