@@ -1,3 +1,10 @@
+2023-10-03 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* sdas/asrab/rabmch.c:
+	  Fix bug #3661, patch by D-mo.
+	* support/regression/tests/bug-3661.c:
+	  Regression test for bug #3661.
+
 2023-09-30 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* support/regression/ports/uc6502-stack-auto/support.c,
